--- a/Edit_CSS.html
+++ b/Edit_CSS.html
@@ -51,6 +51,6 @@
 <!-- CSS OUTPUT -->
 <aside class="code"><button id="copy">Copiar CSS</button><pre><code id="css"></code></pre><button id="dl">Descarregar HTML</button></aside>
 </div>
-<script src="Edit_CCSS.js"></script>
+<script src="Edit_CSS.js"></script>
 </body>
 </html>
