--- a/editorCSS.html
+++ b/editorCSS.html
@@ -27,7 +27,12 @@
 		  <button class="ed-side-bt"><i class="bi bi-layout-text-window-reverse"></i> Formulario</button>
 		  <div class="ed-subside">
 			
-			<div class="ed-row section-title">General</div>
+			<div class="ed-row section-title">General
+			  <button class="ed-closeside-bt" aria-label="Tancar">
+				<i class="bi bi-x-circle"></i>
+			  </button>
+			</div>
+
             <div class="ed-row">
               <label for="fr-input-width">Ancho (px):</label>
               <input class="ed-input num" type="number" id="fr-input-width" min="300" max="2000" data-fclass="f-form" data-fproperty="width" data-findex="" data-funit="px"/>
@@ -72,7 +77,11 @@
 		  <button class="ed-side-bt"><i class="bi-card-heading"></i> Capçalera</button>
 		  <div class="ed-subside">
 			
-			<div class="ed-row section-title">General</div>
+			<div class="ed-row section-title">General
+			  <button class="ed-closeside-bt" aria-label="Tancar">
+				<i class="bi bi-x-circle"></i>
+			  </button>
+			</div>
             <div class="ed-row">
               <label for="hd-input-height">Alto (px):</label>
               <input class="ed-input num" type="number" id="hd-input-height" min="10" max="50"  data-fclass="f-head" data-fproperty="height" data-findex="" data-funit="px"/>
@@ -171,9 +180,13 @@
 		</li>
 		<li>
 	<! --- MENU --- !>
-		  <button  class="ed-side-bt" data-anex="f-marc{top:.f-menu-opcio-act+40px left:.f-menu-opcio-act width:180px height:300px }"><i class="bi bi-list"></i> Menú</button>
+		  <button  class="ed-side-bt" data-anex="#marcsb{top:.f-menu-opcio-act+40px left:.f-menu-opcio-act width:160px height:120px }"><i class="bi bi-list"></i> Menú</button>
 		  <div class="ed-subside">
-			<div class="ed-row section-title">General</div>
+			<div class="ed-row section-title">General
+			  <button class="ed-closeside-bt" aria-label="Tancar">
+				<i class="bi bi-x-circle"></i>
+			  </button>
+			</div>
 			<div class="ed-row">
 			  <label for="mn-input-height">Altura.:</label>
 			  <input class="ed-input num" type="number" id="mn-input-height" min="10" max="40"  data-fclass="f-menu" data-fproperty="height" data-findex="" data-funit="px"/>
@@ -308,9 +321,13 @@
 	  <h3>Elementos</h3>
 	  <ul> 
 		<li>
-		  <button  class="ed-side-bt" data-anex="f-marc{width:400px height:400px left:400px top:120px}"><i class="bi bi-square"></i> Cuadros</button>
+		  <button  class="ed-side-bt" data-anex="#mostra{width:400px height:400px left:400px top:120px}"><i class="bi bi-square"></i> Cuadros</button>
 		  <div class="ed-subside">
-			<div class="ed-row section-title">Background</div>
+			<div class="ed-row section-title">Background
+			  <button class="ed-closeside-bt" aria-label="Tancar">
+				<i class="bi bi-x-circle"></i>
+			  </button>
+			</div>
 			  <div class="ed-row">
 				<label for="mc-input-bgc">Color:</label>
 				<input class="ed-input color" type="color" id="mc-input-bgc" data-fclass="f-marc" data-fproperty="background-color" data-findex="1-rgb[1:3]" data-funit="HEX"/>
@@ -362,9 +379,16 @@
 		  <div class="f-menu-opcio-sel">Seleccionado</div>
 		 
         </div>
-		<div class="f-marc"></div>
+		<div class="f-marc submenu" id="marcsb">
+		  <div class="f-sb-opc">Opción Activa</div>
+		  <div class="f-sb-opc.disable">Opción Incativa</div>
+		  <div class="f-sb-sep"></div>
+		  <div class="f-sb-opc.true">Selector Activo</div>
+		  <div class="f-sb-opc.true.disable">Selector Incativo</div>
+		</div>
 
- <!-- Ací vindrà la resta del contingut -->
+ 		<div class="f-marc" id="mostra"></div>
+<!-- Ací vindrà la resta del contingut -->
       </div>
     </div>
 
